--- a/casio_cal.css
+++ b/casio_cal.css
@@ -7,7 +7,7 @@
 }
 
 .calculator__body {
-    height: 32rem;
+    height: 37rem;
 }
 
 .left-buttons {
@@ -26,7 +26,9 @@
 
 .calculator__buttons_top-inner span {
 
-    flex: 1!important;
-    align-items: center;
+
 }
 
+.calculator__button_small {
+    border-radius: 51% 50% 68% 68% / 33% 30% 68% 68% ;
+}
